--- a/professional.html
+++ b/professional.html
@@ -7,6 +7,18 @@
 <pre>
 <ul>
 <li><i class="fa fa-check-square-o fa-lg"></i> Research and Development.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Prototyped and developed micro-service based motion planning and physics-engine pipelines.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Using Moveit & Bullet-Physics engine built on C++, gRPC, PaperTrail.</li>
+ <li><i class="fa fa-check-square-o fa-lg"></i> Datadog, Kubernetes, Docker, Git, Bitbucket, Swagger and documentation tools. </li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Joint-space and Cartesian-space planning requests for 5,6,7 axis robots with wrist and end-effector pose constraints.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Advanced features included delivery of metrics.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Motion planning was optimized using RRT* and A* algorithms.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Modernization of KUKA's legacy suites for robot selection and configuration. </li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Showcased at major trade shows and conferences like CIIF (China International Industry Fair, Nov. 2017) <br>and SXSW (South by Southwest, 2018), Automatica(Munich 2018).</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Collaborated with Visual Components to facilitate transfer of knowledge and technology after acquisition.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Mentoring interns and new-hires team members.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> KUKA smartPAD experience.</li>
+<li><i class="fa fa-check-square-o fa-lg"></i> Certified in KUKA Sim Pro 3.0</li>
 <li><i class="fa fa-check-square-o fa-lg"></i> Developing Industry 4.0 simulations pipeline. </li>
 </ul>
 </pre>
